@@ -80,6 +80,7 @@ public:
 	gboolean parse_bodystructure (std::string, class PartInfo &,
 									gboolean toplevel=true);
 	gboolean parse_bodystructure_parameters (std::string, class PartInfo &);
+	void command_capability (void) throw (imap_err);
 	std::vector<int> command_searchnotseen (void) throw (imap_err);
 	void reset_tag();
 	std::string tag();
